--- a/index.html
+++ b/index.html
@@ -926,7 +926,4 @@
             
             <div class="interval-table-container">
                 <div class="interval-table-title">🔍 区間分析表</div>
-                <table class="data-table" id="intervalTable">
-                    <thead>
-                        <tr>
-                            <th><span class="interval-label
+                <table class="data-table" id="interval
