--- a/index.html
+++ b/index.html
@@ -1721,7 +1721,7 @@
             </label>
             <input type="file" id="multiFileInput" accept="image/*" multiple style="display: none;">
             
-            <button class="upload-btn" id="nakiHiroiBtn" style="background: #9b59b6; width: 100%; padding: 15px; border: none; border-radius: 8px; font-size: 16px; cursor: pointer; font-weight: bold; margin-bottom: 15px; color: white;">
+            <button class="upload-btn" id="nakiHiroiBtn" style="background: #9b59b6; width: 100%; padding: 15px; border: none; border-radius: 8px; font-size: 16px; cursor: pointer; font-weight: bold; margin-bottom: 15px; color: white;" onclick="showNakiHiroiPage()">
                 📊 ナキ・拾い推定
             </button>
             
